0.6.1 (12/??/2012):
-------------------

- Fixed some screen resolution-setting bugs.

- Added the "words" that make up a filesystem's label (delimited by spaces,
  dashes, or underscores) to the list of bases used to search for OS icons.
  For instance, if the filesystem's label is "Arch", rEFInd searches for
  os_Arch.icns; if it's "Fedora 17", it searches for os_Fedora.icns and
  os_17.icns; and if it's "NEW_GENTOO", it searches for os_NEW.icns and
  os_GENTOO.icns.

- Refined hints displays to be more context-sensitive, particularly in text
  mode.

- Instead of displaying a blank filesystem label when a filesystem has
  none, rEFInd now displays the size and/or type of the filesystem, as in
  "boot EFI\foo\bar.efi from 200 MiB ext3 volume" rather than "boot
  EFI\foo\bar.efi from".

- Fixed a bug that caused the screen to clear after displaying an error
  message but before displaying the "Hit any key to continue" message when
  a boot loader launch failed.

0.6.0 (12/16/2012):
-------------------

- Fixed a memory allocation bug that could cause a program crash when
  specifying certain values with the "also_scan_dirs", "dont_scan_volumes",
  "dont_scan_dirs", "dont_scan_files", and "scan_driver_dirs" refind.conf
  options.

- Modified Linux kernel initrd-finding code so that if an initrd is
  specified in refind_linux.conf, rEFInd will not add any initrd it finds.
  This enables an override of the default initrd, and is likely to be
  particularly helpful to Arch Linux users.

- Added ext4fs driver!

- Made "boot" the default value for "also_scan_dirs".

- Added identifying screen header to line editor.

- Fixed bug that caused rEFInd's display to be mis-sized upon return
  from a program that set the resolution itself.

- Adjusted "resolution" refind.conf parameter so that it can accept EITHER
  a resolution as width and height OR a single digit as a UEFI mode number
  (which is system-specific). This is done because some systems present the